--- a/src/Mobile/src/BethanyPieShop/BethanyPieShop/BethanyPieShop.Core.csproj
+++ b/src/Mobile/src/BethanyPieShop/BethanyPieShop/BethanyPieShop.Core.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="akavache.core" Version="7.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Polly" Version="7.2.1" />
+    <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.1141" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
