--- a/src/Mobile/test/BethanyPieShop.UnitTests/BethanyPieShop.UnitTests.csproj
+++ b/src/Mobile/test/BethanyPieShop.UnitTests/BethanyPieShop.UnitTests.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\..\src\BethanyPieShop\BethanyPieShop\BethanyPieShop.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModelsTests\" />
+  </ItemGroup>
+
 </Project>
