--- a/src/Mobile/src/BethanyPieShop/BethanyPieShop/BethanyPieShop.Core.csproj
+++ b/src/Mobile/src/BethanyPieShop/BethanyPieShop/BethanyPieShop.Core.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="7.1.0.468" />
     <PackageReference Include="akavache.core" Version="7.1.1" />
+    <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
