--- a/src/Mobile/src/BethanyPieShop/BethanyPieShop.Android/BethanyPieShop.Android.csproj
+++ b/src/Mobile/src/BethanyPieShop/BethanyPieShop.Android/BethanyPieShop.Android.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dependencies\TextToSpeechImplementation.cs" />
+    <Compile Include="Effects\EntryLineColorEffect.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -147,7 +148,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionBethanyPieShopAndroidHideInfoBar="True" TriggeredFromHotReload="False" />
+      <UserProperties TriggeredFromHotReload="False" XamarinHotReloadDebuggerTimeoutExceptionBethanyPieShopAndroidHideInfoBar="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
