--- a/src/Mobile/src/BethanyPieShop/BethanyPieShop.Android/BethanyPieShop.Android.csproj
+++ b/src/Mobile/src/BethanyPieShop/BethanyPieShop.Android/BethanyPieShop.Android.csproj
@@ -148,7 +148,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties TriggeredFromHotReload="False" XamarinHotReloadDebuggerTimeoutExceptionBethanyPieShopAndroidHideInfoBar="True" />
+      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionBethanyPieShopAndroidHideInfoBar="True" TriggeredFromHotReload="False" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
